--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -19,7 +19,7 @@ footer { & a, & p {font-size:14px;}}
 .row .main-wrapper{color:$smoke;}
 .about-content{background-color:$smoke;box-shadow:2px 2px 10px rgba(0,0,0,0.1);border-radius:$global-radius;}
 .button-group li .button{border:0!important;}
-.hero{padding-bottom:50px;background:$ghost url("hero.jpg");background-size:cover;box-shadow:inset 0px 0px 0 2000px rgba(0,0,0,0.2);}
+.hero{padding-bottom:50px;background-size:cover;box-shadow:inset 0px 0px 0 2000px rgba(0,0,0,0.2);}
 .hero-content{padding:40px 0.9375rem;background-color:$jet;}
 .panel{margin:40px 0 40px 0;border:none;background-color:$smoke;border-radius:$global-radius;}
 .large-4 img{box-shadow:2px 2px 10px rgba(0,0,0,0.1);}
@@ -32,6 +32,7 @@ footer { & a, & p {font-size:14px;}}
 	&:hover{background-color:rgba(255,255,255,0.5);}}
 .radius.right.button{color:#000;border:2px #000 solid;border-radius:5px;padding:15px 50px 15px 50px;margin:0;font-size:0.8125em;
 	&:hover{background-color:rgba(0,0,0,0.1);}}
+.sub-content{background-color:$white}
 
 @media only screen and (max-width: 40em)     {.columns.large-centered{font-size:13px;}}
 @media only screen and (min-width: 40.063em) {.columns.large-centered{font-size:14px;}}
