--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,18 +9,20 @@
 	</div>
   </section>
    
-  <div class="row">
-    <div class="large-12 columns">
-      <div class="panel">
-        <div class="row">
-          <div class="large-9 columns">
-            <h4>This is a content section.</h4>
-            <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.</p>
-          </div>
-          <div class="large-3 columns">
-            <a href="#" class="radius button right">Contact Me</a>
+  <section class="sub-content"> 
+    <div class="row">
+      <div class="large-12 columns">
+        <div class="panel">
+          <div class="row">
+            <div class="large-9 columns">
+              <h4>This is a content section.</h4>
+              <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.</p>
+            </div>
+            <div class="large-3 columns">
+              <a href="#" class="radius button right">Contact Me</a>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
+  </section>
