--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero" data-parallax="scroll" data-image-src="<%= asset_path('hero.jpg') %>">
 	<div class="row">
 	  <div class="large-12 columns">
 	    <div class="main-wrapper">
