--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <link rel="icon" type="image/png" href="images/favicon.png"> -->
 
     <title><%= content_for?(:title) ? yield(:title) : " " %></title>
 
@@ -20,5 +21,6 @@
     
     <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
     <%= content_for?(:end_js) ? yield(:end_js) : "" %>
+
   </body>
 </html>
